Fixed style on mobile.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,9 +17,12 @@ h4 {
 .container {
     max-width: 700px;
     margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .navigation {
+    font-size: 1.5vh;
     padding: 15px;
     text-align: center;
     border-bottom: 1px solid gray;
